# Mistral-chatbot

./: .gitignore  app.py  chat_01.py  chat_02.py  chat_03-agent.py  chat_04.py  doc_QA.py  img-to-txt.py  pdf-to-image.py  pyproject.toml
ocr_chat/: 02_structured.json  app01.py  app02.py  app03.py  app04--multi_pdf.py  app04--single_pdf.py  app05_chat.py
